[gd_scene load_steps=7 format=3 uid="uid://b0wx4peeuej0j"]

[ext_resource type="Script" path="res://Scripts/player_inventory.gd" id="1_6i75d"]
[ext_resource type="Texture2D" uid="uid://vgdjn5by6sbj" path="res://Assets/aaaps/player_inventory.png" id="2_ymhgr"]
[ext_resource type="Texture2D" uid="uid://cqkgnh18q3vgi" path="res://Assets/aaaps/player_1_normal.png" id="3_lmim4"]
[ext_resource type="Texture2D" uid="uid://blme1eugxjf0o" path="res://Assets/aaaps/player_1_active.png" id="4_1hguf"]
[ext_resource type="Texture2D" uid="uid://yv7xtk2a32yv" path="res://Assets/aaaps/actions_normal.png" id="5_klaax"]
[ext_resource type="Texture2D" uid="uid://b55v8egp4qa5t" path="res://Assets/aaaps/actions_active.png" id="6_50t63"]

[node name="PlayerXInventory" type="Control"]
custom_minimum_size = Vector2(262, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 262.0
offset_bottom = 150.0
script = ExtResource("1_6i75d")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -100.0
offset_right = 131.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 100)
texture = ExtResource("2_ymhgr")

[node name="AvatarTextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 8.0
offset_right = 151.0
offset_bottom = 122.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("3_lmim4")
texture_pressed = ExtResource("4_1hguf")
texture_hover = ExtResource("4_1hguf")

[node name="HealthLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 215.0
offset_top = 35.0
offset_right = 231.0
offset_bottom = 69.0
tooltip_text = "HEALTH"
mouse_filter = 0
theme_type_variation = &"LabelBig"
theme_override_colors/font_outline_color = Color(0.678431, 0.105882, 0.105882, 1)
text = "3"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MoveDistanceLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 215.0
offset_top = 78.0
offset_right = 231.0
offset_bottom = 113.0
tooltip_text = "MOVEMENT"
mouse_filter = 0
theme_type_variation = &"LabelBig"
theme_override_colors/font_outline_color = Color(0.145098, 0.352941, 0.65098, 1)
text = "2"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Item1TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 33.0
offset_top = 137.0
offset_right = 73.0
offset_bottom = 177.0
toggle_mode = true

[node name="Item2TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 99.0
offset_top = 137.0
offset_right = 139.0
offset_bottom = 177.0

[node name="ActionsTextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 152.0
offset_top = 125.0
offset_right = 262.0
offset_bottom = 195.0
texture_normal = ExtResource("5_klaax")
texture_pressed = ExtResource("6_50t63")
texture_hover = ExtResource("6_50t63")

[connection signal="mouse_entered" from="TextureRect/AvatarTextureButton" to="." method="_on_avatar_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect/AvatarTextureButton" to="." method="_on_avatar_texture_button_mouse_exited"]
[connection signal="toggled" from="TextureRect/AvatarTextureButton" to="." method="_on_avatar_texture_button_toggled"]
[connection signal="pressed" from="TextureRect/Item1TextureButton" to="." method="_on_item_1_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/Item2TextureButton" to="." method="_on_item_2_texture_button_pressed"]
[connection signal="mouse_entered" from="TextureRect/ActionsTextureButton" to="." method="_on_actions_texture_button_mouse_entered"]
